--- a/index.adoc
+++ b/index.adoc
@@ -56,7 +56,7 @@ and debug computer programs as well as learn solve problems like a computer scie
 | Lab B (Poliak) | Park 230 | Thursday, 11:55 AM-12:45 PM EST
 | Lab C (Normoyle) |  Park 231 | Wednesday, 2:40 PM- 4:00 PM EST
 | Office Hours (Normoyle) | TDB | Wednesday, 4-5 PM EST, Thursday afternoons (TBD)   
-| Office Hours (Poliak) | TDB |  TBD
+| Office Hours (Poliak) | Park 200C |  Wednesday, 10-11am EST
 
 |===
 
@@ -80,7 +80,7 @@ Science Center.
 
 *  **Introduction to Programming in Java (Second Edition)** by Robert Sedgewick & Kevin Wayne. Addison-Wesley 2017. Available in Campus Bookstore, or purchase online from Amazon.com (Price on August 19, 2020 is $35.99 for e-text, $65.00 paperback). Book's companion website: Click here.
 *  **Dropbox Account** Please go to link:https://dropbox.com/[dropbox.com] and register. You will be using dropbox to submit assignments. 
-*  **Slack** Please go to link:https://slack.com/signin[slack.com]. Our workspace is BrynMawr-CS110-F20. You can ask questions and request one-on-one help over zoom using this course's slack channel. 
+*  **Slack** Please go to link:https://slack.com/signin[slack.com]. Our workspace is BrynMawr-CS110-F22. You can ask questions and request one-on-one help over zoom using this course's slack channel. 
 *  **Development environment** This refers to the tools we will use to write and run code. We will distribute an installer to help you set this up. We will use git bash, OpenJDK-11, and Visual Studio Code (VS Code).
 
 *Resources*
