--- a/schedule.adoc
+++ b/schedule.adoc
@@ -15,8 +15,8 @@
 * Read: Sedgewick and Wayne, Sec 1.1
 * Read: link:develEnvSetup.html[Setting up your development environment]
 * link:asst00.html[Assignment 0]: *Due September 8th*
-//* link:notes-normoyle/week-aug29.html[Lecture Notes and Resources (Normoyle)] 
-//* link:notes-poliak/week-aug29.html[Lecture Notes and Resources (Poliak)] 
+* link:notes-alinen/notes-aug29.html[Lecture Notes and Resources (Normoyle)] 
+* link:notes-azpoliak/notes-aug29.html[Lecture Notes and Resources (Poliak)] 
 
 //-----------------------------
 | 1 
@@ -27,6 +27,8 @@
 * link:asst01.html[Assignment 1]: *Due September 15th*
 * Terminal, directories/files, Input and output, Basic data types (int,double,String), Variables 
 * Read: Sedgewick and Wayne, Sec 1.2 (Skip `boolean`)
+* link:notes-alinen/notes-sep05.html[Lecture Notes and Resources (Normoyle)] 
+* link:notes-azpoliak/notes-sep05.html[Lecture Notes and Resources (Poliak)] 
 
 //-----------------------------
 |2
@@ -36,6 +38,8 @@
 * Read: Sedgewick and Wayne, Sec 1.2 (`boolean`), Sec 1.3 (`if/else`)
 * link:asst02.html[Assignment 2]: *Due September 22*
 * link:jam1Guide.html[Jam 1 Study Guide]
+* link:notes-alinen/notes-sep12.html[Lecture Notes and Resources (Normoyle)] 
+* link:notes-azpoliak/notes-sep12.html[Lecture Notes and Resources (Poliak)] 
 
 //-----------------------------
 |3
@@ -45,6 +49,8 @@
 * Read: Sedgewick and Wayne, Sec 1.3 (`while` and `for` loops)
 * link:asst03.html[Assignment 3]: *Due September 29th*
 * Code Jam I: Variables and data types
+* link:notes-alinen/notes-sep19.html[Lecture Notes and Resources (Normoyle)] 
+* link:notes-azpoliak/notes-sep19.html[Lecture Notes and Resources (Poliak)] 
 
 //-----------------------------
 |4
@@ -54,6 +60,8 @@
 * Read: Sedgewick and Wayne, Sec 1.4, 1.5, (Strings) 3.1
 * link:asst04.html[Assignment 4]: *Due October 6*
 * link:jam2Guide.html[Jam 2 Study Guide]
+* link:notes-alinen/notes-sep26.html[Lecture Notes and Resources (Normoyle)] 
+* link:notes-azpoliak/notes-sep26.html[Lecture Notes and Resources (Poliak)] 
 
 //-----------------------------
 |5
@@ -62,6 +70,8 @@
 
 * Read: Sedgewick and Wayne, Sec 2.1
 * link:asst05.html[Assignment 5]: *Due October 20*
+* link:notes-alinen/notes-oct03.html[Lecture Notes and Resources (Normoyle)] 
+* link:notes-azpoliak/notes-oct03.html[Lecture Notes and Resources (Poliak)] 
 
 //-----------------------------
 |6
@@ -77,6 +87,8 @@
 
 * Read: Sedgewick and Wayne, Sec 2.1
 * link:asst06.html[Assignment 6]: *Due October 27*
+* link:notes-alinen/notes-oct17.html[Lecture Notes and Resources (Normoyle)] 
+* link:notes-azpoliak/notes-oct17.html[Lecture Notes and Resources (Poliak)] 
 
 //-----------------------------
 |8
@@ -85,6 +97,8 @@
 
 * Read: Sedgewick and Wayne, Sec 3.1, 3.2
 * link:asst07.html[Assignment 7]: *Due *
+* link:notes-alinen/notes-oct24.html[Lecture Notes and Resources (Normoyle)] 
+* link:notes-azpoliak/notes-oct24.html[Lecture Notes and Resources (Poliak)] 
 
 //-----------------------------
 |9
@@ -94,6 +108,8 @@
 * Read: Sedgewick and Wayne, Sec 3.1, 3.2
 * link:jam3Guide.html[Jam 3 Guide]
 * link:asst08.html[Assignment 8]: **
+* link:notes-alinen/notes-oct31.html[Lecture Notes and Resources (Normoyle)] 
+* link:notes-azpoliak/notes-oct31.html[Lecture Notes and Resources (Poliak)] 
 
 //-----------------------------
 |10
@@ -104,6 +120,8 @@
 * Presentations III: Arrays, strings, advanced IO
 * link:jam4Guide.html[Jam 4 Guide]
 * link:asst09.html[Assignment 9]: *Due *
+* link:notes-alinen/notes-nov07.html[Lecture Notes and Resources (Normoyle)] 
+* link:notes-azpoliak/notes-nov07.html[Lecture Notes and Resources (Poliak)] 
 
 //-----------------------------
 |11
@@ -112,6 +130,8 @@
 
 * Read: Sedgewick and Wayne, Sec 2.3
 * link:jam4Guide.html[Jam 4 Guide]
+* link:notes-alinen/notes-nov14.html[Lecture Notes and Resources (Normoyle)] 
+* link:notes-azpoliak/notes-nov14.html[Lecture Notes and Resources (Poliak)] 
 
 //-----------------------------
 |12
@@ -120,6 +140,8 @@
 
 * *NO CLASS THURSDAY, NOV 24th*
 * link:jam5Guide.html[Final exam guide]
+* link:notes-alinen/notes-nov21.html[Lecture Notes and Resources (Normoyle)] 
+* link:notes-azpoliak/notes-nov21.html[Lecture Notes and Resources (Poliak)] 
 
 //-----------------------------
 |13
@@ -127,6 +149,8 @@
 |
 
 * Read: Sedgewick and Wayne, Sec 4.4
+* link:notes-alinen/notes-nov28.html[Lecture Notes and Resources (Normoyle)] 
+* link:notes-azpoliak/notes-nov28.html[Lecture Notes and Resources (Poliak)] 
 
 //-----------------------------
 |14
@@ -135,5 +159,7 @@
 
 * Read: Sedgewick and Wayne, Sec 4.4
 * link:jam5Guide.html[Final exam guide]
+* link:notes-alinen/notes-dec05.html[Lecture Notes and Resources (Normoyle)] 
+* link:notes-azpoliak/notes-dec05.html[Lecture Notes and Resources (Poliak)] 
 
 |===
