--- a/schedule.adoc
+++ b/schedule.adoc
@@ -30,7 +30,7 @@
 * Read: Sedgewick and Wayne, Sec 1.2 (Skip `boolean`)
 * link:notes-alinen/notes-sep05.html[Lecture Notes and Resources (Normoyle)] 
 * link:notes-azpoliak/notes-sep05.html[Lecture Notes and Resources (Poliak)] 
-* Lab activity: TBD
+* Lab activity: Working with the command line
 
 //-----------------------------
 |2
