--- a/notes-azpoliak/notes-aug29.adoc
+++ b/notes-azpoliak/notes-aug29.adoc
@@ -3,4 +3,6 @@ include::header.adoc[]
 :title: Notes: Week of Aug 29
 :Revision: 0.1
 
-= {title}
+= Tuesday Aug 30th
+
+* Attendance sheet - https://forms.gle/eDQcnW1DpZUDtCta8
