--- a/schedule.adoc
+++ b/schedule.adoc
@@ -17,7 +17,7 @@
 * link:asst00.html[Assignment 0]: *Due September 8th*
 * link:notes-alinen/notes-aug29.html[Lecture Notes and Resources (Normoyle)] 
 * link:notes-azpoliak/notes-aug29.html[Lecture Notes and Resources (Poliak)]
-* link:slides-azpoliak/lecture00_introduction_08_30.pdf[Lecture 00 slides (Poliak)] 
+* link:slides-azpoliak/lecture00_introduction_08_30.pdf[Lecture 00 slides (Poliak)] link:slides-azpoliak/lecture01_09_01.pdf[Lecture 01 slides (Poliak)] 
 * Lab activity: Setting up your development environment 
 
 //-----------------------------
