--- a/asst01.adoc
+++ b/asst01.adoc
@@ -17,73 +17,101 @@ The goals of this assignment are:
 
 :sectnums:
 
-= Menu generator
+= Task Tracker
 
-_credit: Sara Mathieson_
+Write a program, `Tasks.java` that computes the time when the user will finish 
+their tasks. You can assume that all times are integers that represent the time 
+on a [link:http://militarytimechart.com[24-hr "military" clock]. 
+For example, 7 PM is 19:00, or 19, in this representation. 
 
-You are in charge of writing a script for the daily specials at a new restaurant
-in Swarthmore: Corner Cafe. In `Menu.java`, write a program that will ask the
-restaurant for three pieces of information: the _soup_ of the day, the _special_
-of the day, and the _dessert_ of the day. Your program should then use this
-information to generate a short description of the daily specials (i.e. a
-restaurant [*madlib*](https://en.wikipedia.org/wiki/Mad_Libs)).
+[source,subs="quotes"]
+----
+$ **javac Tasks.java**
+$ **java Tasks**
+Enter the current hour: **23**
+Enter the task duration: **5**
+
+You will finish at 4:00 o'clock.
+
+$ **java Tasks**
+Enter the current hour: **9**
+Enter the task duration: **5**
+
+You will finish at 14:00 o'clock.
+----
+
+Hints:
+
+* Use modulo % to compute the completion time.
+
+
+= Calorie Tracker
+
+Write a program called `Calories.java` that computes the amount of calories 
+a person burns in a week while walking. On average, a person burns 100 calories 
+for each mile walked. Unlike the previous question, where we read data from the 
+console, use *command-line arguments* to get the number of miles walked.
+
+[source,subs="quotes"]
+----
+$ **javac Calories.java**
+$ **java Calories 3.5**
+You burned 350.0 calories!
+$ **java Calories 0**
+You burned 0.0 calories!
+----
+
+Hints and requirements
+
+* Use a double to store the number of miles
+* Use `System.out.printf` to print the number of calories
+* Assume that your first command line argument (e.g. args[0]) is a positive double!
+
+NOTE: It's ok if your program throws an exception if no argument is given! When this happens, 
+you will get a runtime error. For example
+[source, subs="quotes"]
+----
+$ **java Calories**
+Exception in thread "main" java.lang.ArrayIndexOutOfBoundsException: Index 0 out of bounds for length 0
+        at Calories.main(Calories.java:3)
+----
+
+= Pet Agency
+
+You are in charge of writing a script for the Bryn Mawr Pet Adoption Agency. In
+`Adopt.java`, write a program that will ask the user for an _animal_, an
+_integer_, a _noun_, and and a _decimal number_.  Your program should then use this
+information to generate a short description of what the pets need at the adoption agency.
+(i.e. a This question is an example of a
+[*madlib*](https://en.wikipedia.org/wiki/Mad_Libs)).
 
 Here are two examples (user input in **bold**):
 
 [source,java,subs="quotes"]
 ----
-$ **java Menu.java**
-Soup: **wild rice**
-Special: **salmon**
-Dessert: **peach cobbler**
+$ **java Pets.java**
+Animal: **owls**
+Integer: **3**
+Noun: **hats**
+Decimal: **1.3**
 
-Welcome to Corner Cafe!
-Our soup of the day is wild rice.
-The special tonight is salmon,
-and for dessert, try our world-famous peach cobbler.
+Welcome to the Bryn Mawr Pet Adoption Agency!
+We have 3 owls in need of hats and 1.3% of your love!
 
-$ **java Menu.java**
-Soup: **cup noodles**
-Special: **pizza**
-Dessert: **M&Ms**
+$ **java Pets.java**
+Animal: **slugs**
+Integer: **3000**
+Noun: **peaches**
+Decimal: **110.3**
 
-Welcome to Corner Cafe!
-Our soup of the day is cup noodles.
-The special tonight is pizza,
-and for dessert, try our world-famous M&Ms.
+Welcome to the Bryn Mawr Pet Adoption Agency!
+We have 3000 slugs in need of peaches and 110.3% of your love!
 ----
 
-= Cakes for sale 
+Hints:
 
-Write a program called `Cakes.java` that computes the price of a cake for the 
-famous bakery `Artisanal Squares`. This bakery makes exclusive square cakes, with 
-prices proportional to the area.  
-
-[source,subs="quotes"]
-----
-$ **java Cakes.java**
-What is the cake width? **3**
-What is the cake height? **4.5**
-What is the cost per square inch? **3**
-The cake cost is $40.5
-----
-
-= Calculator
-
-Write a program, `Calculator.java` that asks the user for two numbers and returns the sum, difference, product, and division of them.  
-
-[source,subs="quotes"]
-----
-$ **java Calculator.java**
-Enter the first number: **3.5**
-Enter the second number: **9.1**
-
-3.5 * 9.1 = 31.849999999999998
-3.5 / 9.1 = 0.38461538461538464
-3.5 + 9.1 = 12.6
-3.5 - 9.1 = -5.6
-----
-
+* Use either a `float` or `double` variable to hold the decimal type
+* Use `System.out.printf` to print the decimal value with single precision.
 
 = What to hand-in
 
