--- a/schedule.adoc
+++ b/schedule.adoc
@@ -40,7 +40,7 @@
 |*Conditionals* anchor:week03[]
 
 * Read: Sedgewick and Wayne, Sec 1.2 (`boolean`), Sec 1.3 (`if/else`)
-* link:asst02.html[Assignment 2]: *Due September 22*
+* link:.html[Assignment 2]: *Due September 22*
 * link:notes-alinen/notes-sep12.html[Lecture Notes and Resources (Normoyle)] 
 * link:notes-azpoliak/notes-sep12.html[Lecture Notes and Resources (Poliak)] 
 * Lab activity: Code Jam 01, link:jam1Guide.html[Jam 1 Study Guide]
@@ -51,7 +51,7 @@
 |*Loops* anchor:week04[]
 
 * Read: Sedgewick and Wayne, Sec 1.3 (`while` and `for` loops)
-* link:asst03.html[Assignment 3]: *Due September 29th*
+* link:.html[Assignment 3]: *Due September 29th*
 * link:notes-alinen/notes-sep19.html[Lecture Notes and Resources (Normoyle)] 
 * link:notes-azpoliak/notes-sep19.html[Lecture Notes and Resources (Poliak)] 
 * Lab activity: TBD
@@ -62,7 +62,7 @@
 |*Arrays, Strings, File I/O* anchor:week05[]
 
 * Read: Sedgewick and Wayne, Sec 1.4, 1.5, (Strings) 3.1
-* link:asst04.html[Assignment 4]: *Due October 6*
+* link:.html[Assignment 4]: *Due October 6*
 * link:notes-alinen/notes-sep26.html[Lecture Notes and Resources (Normoyle)] 
 * link:notes-azpoliak/notes-sep26.html[Lecture Notes and Resources (Poliak)] 
 * Lab activity: TBD
@@ -73,7 +73,7 @@
 |*Functions* anchor:week06[]
 
 * Read: Sedgewick and Wayne, Sec 2.1
-* link:asst05.html[Assignment 5]: *Due October 20*
+* link:.html[Assignment 5]: *Due October 20*
 * link:notes-alinen/notes-oct03.html[Lecture Notes and Resources (Normoyle)] 
 * link:notes-azpoliak/notes-oct03.html[Lecture Notes and Resources (Poliak)] 
 * Lab activity: Code jam 02, link:jam2Guide.html[Jam 2 Study Guide]
@@ -91,7 +91,7 @@
 |*Functions* anchor:week07[]
 
 * Read: Sedgewick and Wayne, Sec 2.1
-* link:asst06.html[Assignment 6]: *Due October 27*
+* link:.html[Assignment 6]: *Due October 27*
 * link:notes-alinen/notes-oct17.html[Lecture Notes and Resources (Normoyle)] 
 * link:notes-azpoliak/notes-oct17.html[Lecture Notes and Resources (Poliak)] 
 * Lab activity: TBD
@@ -102,7 +102,7 @@
 |*Object oriented programming: using objects* anchor:week08[]
 
 * Read: Sedgewick and Wayne, Sec 3.1, 3.2
-* link:asst07.html[Assignment 7]: *Due *
+* link:.html[Assignment 7]: *Due *
 * link:notes-alinen/notes-oct24.html[Lecture Notes and Resources (Normoyle)] 
 * link:notes-azpoliak/notes-oct24.html[Lecture Notes and Resources (Poliak)] 
 * Lab activity: Code jam 03, link:jam3Guide.html[Jam 3 Study Guide]
@@ -113,7 +113,7 @@
 |*Objects oriented programming: creating objects* anchor:week09[]
 
 * Read: Sedgewick and Wayne, Sec 3.1, 3.2
-* link:asst08.html[Assignment 8]: **
+* link:.html[Assignment 8]: **
 * link:notes-alinen/notes-oct31.html[Lecture Notes and Resources (Normoyle)] 
 * link:notes-azpoliak/notes-oct31.html[Lecture Notes and Resources (Poliak)] 
 * Lab activity: TBD
@@ -125,7 +125,7 @@
 
 * Read: Sedgewick and Wayne, Sec 4.2
 * Presentations III: Arrays, strings, advanced IO
-* link:asst09.html[Assignment 9]: *Due *
+* link:.html[Assignment 9]: *Due *
 * link:notes-alinen/notes-nov07.html[Lecture Notes and Resources (Normoyle)] 
 * link:notes-azpoliak/notes-nov07.html[Lecture Notes and Resources (Poliak)] 
 * Lab activity: Code jam 04, link:jam4Guide.html[Jam 4 Study Guide]
