--- a/schedule.adoc
+++ b/schedule.adoc
@@ -31,7 +31,7 @@
 * Read: Sedgewick and Wayne, Sec 1.2 (Skip `boolean`)
 * link:notes-alinen/notes-sep05.html[Lecture Notes and Resources (Normoyle)] 
 * link:notes-azpoliak/notes-sep05.html[Lecture Notes and Resources (Poliak)]
-* link:slides-azpoliak/lecture02_09_06.pdf[Lecture 02 slides (Poliak)]
+* link:slides-azpoliak/lecture02_09_06.pdf[Lecture 02 slides (Poliak)] link:slides-azpoliak/lecture03_09_08.pdf[Lecture 03 slides (Poliak)]
 * Lab activity: Working with the command line
 
 //-----------------------------
