--- a/schedule.adoc
+++ b/schedule.adoc
@@ -43,6 +43,7 @@
 * link:.html[Assignment 2]: *Due September 22*
 * link:notes-alinen/notes-sep12.html[Lecture Notes and Resources (Normoyle)] 
 * link:notes-azpoliak/notes-sep12.html[Lecture Notes and Resources (Poliak)] 
+* link:slides-azpoliak/lecture04_09_13.pdf[Lecture 04 slides (Poliak)]
 * Lab activity: Code Jam 01, link:jam1Guide.html[Jam 1 Study Guide]
 
 //-----------------------------
