week03 lectures/examples

--- a/notes-alinen/notes-sep12.adoc
+++ b/notes-alinen/notes-sep12.adoc
@@ -4,3 +4,13 @@ include::header.adoc[]
 :Revision: 0.1
 
 = {title}
+
+Lecture Videos:
+
+link:https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=0f73c324-476a-4ca5-917d-af0e015fdb00[Mon]
+
+link:[Wed]
+
+Class Examples:
+
+link:https://github.com/BrynMawr-CS113-F22/class-examples-normoyle/tree/main/week03-sep12[Lecture programs]
