update lecture notes

--- a/notes-alinen/notes-sep12.adoc
+++ b/notes-alinen/notes-sep12.adoc
@@ -9,7 +9,7 @@ Lecture Videos:
 
 link:https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=0f73c324-476a-4ca5-917d-af0e015fdb00[Mon]
 
-link:[Wed]
+link:https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=7f76624a-a865-4f24-9e23-af10014747f6[Wed]
 
 Class Examples:
 
