--- a/asst02.adoc
+++ b/asst02.adoc
@@ -18,71 +18,78 @@ The goals of this assignment are:
 :stem: latexmath
 :sectnums:
 
-= What are the hours?
+= What are the years and weeks?
 
-Implement a program `Hours.java` which inputs the number of minutes and outputs the number of hourse in 
-with human friendly text. Note that when the number of hours is one, we print 
-*hour* and not *hours*! When the number of minutes is one, we print *minute* and 
-not *minutes*.
+Implement a program `Years.java` which inputs the number of days and outputs the number of years, weeks, and days
+in a human friendly text.
+Note that when the number of *years* (or *weeks* or *day* is one),
+we print *year* and not *years* (or *week* instead of *week* or *day* instead of *days*!
 
 [source,subs="quotes"]
 ----
-$ **java Hours 67**
-1 hour and 7 minutes
+$ **java Years 67**
+0 years 9 weeks and 4 days
 
-$ **java Hours 453**
-7 hours and 33 minutes
+$ **java Years 453**
+1 year 12 weeks and 5 days
 
-$ **java Hours 360**
-6 hours and 0 minutes
+$ **java Years 360**
+0 years 51 weeks and 3 days
 
-$ **java Hours 61**
-1 hour and 1 minute
+$ **java Years 61**
+0 years 8 weeks and 5 days
 ----
 
 You may assume that the input to the program is a positive integer, i.e. a
-whole number greater than 0. 
+whole number greater than 0. You can also assume no leap years and that every year has the same number of weeks and days.
 
+# Rock, Paper, Scissors -- Shoot!
 
-# Pythagorean Triples
+Rock, Paper Scissors Shoot is a popular game where two players choose either rock, paper, or scissors. 
+According to Wikipedia there are even
+''professional Rock Paper Scissors Tournaments all around the world!'' and
+it's even been used to settle court cases (who knew!).
 
-_credit: Sara Mathieson_
+Write a program in `RPSS.java` that simulates one round of Rock, Paper, Scissors, Shoot.
+Your program should ask the user to choose "rock", "paper", or "scissors",
+randomly choose an option for the computer player, and then determine if the user
+or computer wins, or if there is a tie. If the user chooses something that is
+not "rock", "paper", or "scissors", make sure to end the game.
 
-A [Pythagorean triple](https://en.wikipedia.org/wiki/Pythagorean_triple) is a
-set of three positive integers *a*, *b*, and *c* such that the sum of the
-squares of two of the numbers equals the square of the third. i.e.
+The basic rules are as follows (here's a short link:https://www.youtube.com/watch?v=F4uQssMXO38[youtube video] describing the rules as well):
 
-latexmath:[a^2 + b^2 = c^2]
+* "rock" beats "scissors", "scissors" beats "paper", and "paper" beats "rock" 
+* if the user and computer both choose the same option, then print out a message saying there is a tie.
 
-In this example, *a* and *b* represent the shorter sides of a right triangle and
-*c* represents the hypotenuse.
-
-Write a program in `Pythagoras.java` that determines whether or not three numbers
-entered by the user form a valid Pythagorean triple. The numbers can be in any
-order. If the numbers do form a Pythagorean triple, print out a message that
-includes the hypotenuse (longest side). If not, print out a helpful message.
 Here are a few examples of how your program should work:
 
 [source,subs="quotes"]
 ----
-$ **java Pythagoras**
-Enter side 1: **4**
-Enter side 2: **5**
-Enter side 3: **3**
-Pythagorean triple with hypotenuse 5
+$ **java RPSS**
+Choose rock, paper, or scissors": **rock**
+The computer chose rock.
+Winner: Tie
 
-$ **java Pythagoras**
-Enter side 1: **13**
-Enter side 2: **5**
-Enter side 3: **12**
-Pythagorean triple with hypotenuse 13
+$ **java RPSS**
+Choose rock, paper, or scissors": **paper**
+The computer chose rock.
+Winner: You win - hooray!
 
-$ **java Pythagoras**
-Enter side 1: **8**
-Enter side 2: **4**
-Enter side 3: **9**
-Not a Pythagorean triple!
+$ **java RPSS**
+Choose rock, paper, or scissors": **paper**
+The computer chose scissors.
+Winner: Computer
+
+$ **java RPSS**
+Choose rock, paper, or scissors": **banana**
+banana is an invalid option, goodbye.
 ----
+
+Hints:
+
+* Use the `Math` library to randomly choose an integer between 0 (inclusive) and 3 (exclusively) 
+* Create conditionals statements to map 0, 1, and 2 to "rock", "paper" and "scissors" respectively.
+* You will likely need to use nested if statements.
 
 = Speeding fines!
 
@@ -90,8 +97,8 @@ _credit: Lisa Meeden_
 
 Write a program called `Speeding.java` that calculates speeding fines based on the traffic laws of the state of Pennsylvania.  Here is a short description of the fine structure:
 
-_For most speeding violations, the fine is $35 plus $2 for every
-mile **in excess of 5 mph** over the limit. However, if the maximum limit is 65 mph or higher, the fine is $42.50 plus $2 for every mile **in excess of 5 mph** over the limit._
+_For most speeding violations, the fine is $28 plus $2.50 for every
+mile **in excess of 5 mph** over the limit. However, if the maximum limit is 60 mph or higher, the fine is $47.50 plus $4 for every mile **in excess of 5 mph** over the limit._
 
 The goal of this law is to discourage motorists from driving
 significantly over the posted limits.  If the motorist is traveling
@@ -105,10 +112,10 @@ See the table below for some example scenarios.
 |===
 | Speed | Limit | Over | Excess > 5 |  Base fine | Extra fine | Total fine
 | 45 | 50 |  0 |  0 |  0.00 |  0.00 |  0.00
-| 52 | 50 |  2 |  0 | 35.00 |  0.00 | 35.00
-| 65 | 50 | 15 | 10 | 35.00 | 20.00 | 55.00
-| 69 | 65 |  4 |  0 | 42.50 |  0.00 | 42.50
-| 75 | 65 | 10 |  5 | 42.50 | 10.00 | 52.50
+| 52 | 50 |  2 |  0 | 28.00 |  0.00 | 28.00
+| 65 | 50 | 15 | 10 | 28.00 | 25.00 | 53.00
+| 69 | 65 |  4 |  0 | 47.50 |  0.00 | 47.50
+| 75 | 65 | 10 |  5 | 47.50 | 20.00 | 67.50
 |===
 
 Below are some examples of the running program. User input is shown in
@@ -129,7 +136,7 @@ Enter speed limit: **55**
 Enter clocked speed: **58**
 
 Motorist is over the limit by 3 mph
-Total fine is: $35.0
+Total fine is: $28.00
 
 $ **java Speeding**
 
@@ -138,9 +145,9 @@ Enter clocked speed: **63**
 
 Motorist is over the limit by 8 mph
 
-Base fine is: $35.0
-Additional $2 per 3 miles in excess of 5 mph over limit
-Total fine is: $41.0
+Base fine is: $28.00
+Additional $2.50 per 3 miles in excess of 5 mph over limit
+Total fine is: $35.50
 
 $ **java Speeding**
 
@@ -149,16 +156,16 @@ Enter clocked speed: **69**
 
 Motorist is over the limit by 4 mph
 
-Total fine is: $42.5
+Total fine is: $47.50
 ----
 
 
 = What to hand-in
 
-. The programs, `Pythagoras.java`, `Hours.java`, and `Speeding.java`.
+. The programs, `Years.java`, `RPSS.java`, and `Speeding.java`.
 . Make sure each program has a header containing your name, date, and purpose of the program
 . A brief write-up containing your name, assignment number, and a few sentences about how long you 
-spent on the assignment and any interesting bugs you solved.  
+spent on the assignment and any interesting bugs you solved. This file should be saved in a `.txt` file (not a word doc file) 
 
 == How to hand-in
 
