--- a/schedule.adoc
+++ b/schedule.adoc
@@ -40,7 +40,7 @@
 |*Conditionals* anchor:week03[]
 
 * Read: Sedgewick and Wayne, Sec 1.2 (`boolean`), Sec 1.3 (`if/else`)
-* link:.html[Assignment 2]: *Due September 22*
+* link:asst02.html[Assignment 2]: *Due September 22*
 * link:notes-alinen/notes-sep12.html[Lecture Notes and Resources (Normoyle)] 
 * link:notes-azpoliak/notes-sep12.html[Lecture Notes and Resources (Poliak)] 
 * link:slides-azpoliak/lecture04_09_13.pdf[Lecture 04 slides (Poliak)]
