--- a/asst03.adoc
+++ b/asst03.adoc
@@ -35,26 +35,41 @@ Enter a decorator character: **+**
 +++++++++++++++++++++
 
 $ **java Banner**
-Enter a phrase: **Show me the money!**
+Enter a phrase: **Applesauce!**
 Enter a decorator character: **$**
-$$$$$$$$$$$$$$$$$$$$$$
-$ Show me the money! $
-$$$$$$$$$$$$$$$$$$$$$$
+$$$$$$$$$$$$$$$
+$ Applesauce! $
+$$$$$$$$$$$$$$$
 ----
 
 Hints and Requirements:
 
 * Your border should fit around the entered phrase as in the examples. 
+* You can read both the phrase and decorator character as Strings
+* You can assume the user will enter a single character as a decorator
 
 = Checkerboard
 
-Write a program, `CheckerBoard.java`, that asks the user for a size and 
+Write a program, `Checkerboard.java`, that asks the user for a size and 
 uses a nested loop to print a two-dimensional size-by-size checkerboard pattern
-consisting of spaces and asterisks.
+consisting of dashes and o's.
 
 [source,subs="quotes"]
 ----
+$ **javac Checkerboard.java**
 $ **java Checkerboard**
+Enter a size: **11**
+o-o-o-o-o-o
+-o-o-o-o-o-
+o-o-o-o-o-o
+-o-o-o-o-o-
+o-o-o-o-o-o
+-o-o-o-o-o-
+o-o-o-o-o-o
+-o-o-o-o-o-
+o-o-o-o-o-o
+-o-o-o-o-o-
+o-o-o-o-o-o
 ----
 
 = ISBN
@@ -62,36 +77,62 @@ $ **java Checkerboard**
 Write a program, `ISBN.java`, that computes the checksum and prints the ISBN number 
 for a given 9-digit number.
 
-The ISBN number is 10-digit code that uniquely specifies a book. For example, 
-the ISBN number for _Harry Potter and the Socerer's Stone_ is 9780747532743.
+The link:https://en.wikipedia.org/wiki/ISBN[ISBN] number is 10-digit code that uniquely specifies a book. For example, 
+the ISBN number for _Harry Potter and the Socerer's Stone_ is 978059035
 
 The right-most digit is a _checksum_ digit that can be computed using the other 9 digits. 
-Suppose we have an ISBN number, defined as stem:+d_{10} d_9 d_8 d_7 d_6 d_5 d_4 d_3 d_2 d_1+, 
-where each stem:+d_i+ is a digit with value between 0 and 9. For example, 
-for _Harry Potter_, d_{10} is 9; d_9 is 7; d_8 is 8; etc.
+Suppose we have an ISBN number, defined as 
+
+[stem]
+++++
+d_{10} d_9 d_8 d_7 d_6 d_5 d_4 d_3 d_2 d_1
+++++
+
+where each stem:[d_i] is a digit with value between 0 and 9. For example, 
+for _Harry Potter_'s ISBN number, stem:[d_{10}] is 9; stem:[d_9] is 7; stem:[d_8] is 8; etc.
 
 The ISBN number has the property that the following expression must be a multiple of 11.
 
 [stem]
 ++++
-10d_{10} + 9d_9 + 8d_8 + 7d_7 + 6d_6 + 5d_5 + 4d_4 + 3d_3 + 2d_2 + d_1
+10d_{10} + 9d_9 + 8d_8 + 7d_7 + 6d_6 + 5d_5 + 4d_4 + 3d_3 + 2d_2 + 1d_1
 ++++
 
 Therefore, to find the checksum you should test each digit, from 0 to 9, to find 
-a value for d_1 that results in a number that is a multiple of 11. Below are 
-examples of running this program. User input is in bold.
+a value for stem:[d_1] that results in a number that is a multiple of 11. 
+The value for stem:[d_1] is called the _checksum digit_. 
+
+Below are examples of running this program. User input is in bold.
 
 [source,subs="quotes"]
 ----
-$ **java ISBN**
+$ **java ISBN 817525766**
+The checksum digit is 0
+The full ISBN number is 8175257660
+
 ----
 
-Features and Requirements:
+Features, Hints and Requirements:
 
 * Your program must use _command line arguments_!
 * Use % to determine whether the ISBN formula is a multiple of 11
+* You can assume that the input with be a 9 digit number
+* You should print the checksum along with the 10 digit ISBN number. 
 
-= Let's make a deal
+NOTE: The input is the first 9 digits of the ISBN number. An easy way to 
+parse this is to go through each character of the input string and convert each 
+individually to a digit. One way to do this is use the function `Character.getNumericValue(c);` .
+For example, 
+[source]
+----
+String example = "123456789";
+for (int i = 0; i < example.length(); i++) {
+    char c = example.charAt(i);
+    int digit = Character.getNumericValue();
+    System.out.println(digit);
+}
+----
+
 = Poll Predictor
 
 Write a program, `Predictor.java`, which predicts a candidate's likelihood of
